<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/rounded_background"
    android:layout_marginBottom="5sp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="20sp">

        <TextView
            android:id="@+id/transactionOrganisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gteestiprodisplay_bold"
            android:text="@string/transOrganisation"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/transactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/gteestiprodisplay_regular"
            android:text="@string/transType"
            android:textColor="@color/lightGrey"/>

    </LinearLayout>

    <TextView
        android:id="@+id/transactionSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gteestiprodisplay_medium"
        android:text="@string/transSign"
        android:textSize="18sp"
        android:textColor="@color/green"
        />

    <TextView
        android:id="@+id/transactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:fontFamily="@font/gteestiprodisplay_bold"
        android:text="@string/transAmount"
        android:textSize="18sp"
        android:textColor="@color/green"/>

</LinearLayout>

