<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gteestiprodisplay_ultrabold"
        android:text="@string/my_finances"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/cardViewGrey"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/rubleAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/ruble_acc"
                android:textColor="@color/lightGrey"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/gteestiprodisplay_bold"
                android:text="@string/balance_template"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:layout_marginVertical="40dp"
            android:layout_marginStart="260dp"
            android:src="@drawable/ic_rubles" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/operationsCardView"
        android:layout_width="0sp"
        android:layout_height="125sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="14sp"
        android:layout_marginEnd="5sp"
        app:cardBackgroundColor="@color/cardViewGrey"
        app:cardCornerRadius="12sp"
        app:layout_constraintEnd_toStartOf="@+id/bonusCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/operationsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:text="@string/operations"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageSendMoney"
            android:layout_width="42sp"
            android:layout_height="44sp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="15sp"
            android:src="@drawable/ic_send_money" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bonusCardView"
        android:layout_width="0sp"
        android:layout_height="125sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="14sp"
        android:layout_marginEnd="10sp"
        app:cardBackgroundColor="@color/cardViewGrey"
        app:cardCornerRadius="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/operationsCardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/bonusButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:text="@string/bonuses"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="42dp"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_procent" />
    </androidx.cardview.widget.CardView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"
        android:elevation="0dp"
        style="@style/AppTheme.BottomNavigationView" />
</androidx.constraintlayout.widget.ConstraintLayout>